@@ -1,14 +1,18 @@
 package id.ac.ui.cs.advprog.perbaikiinaja.service;
 
 import java.math.BigDecimal;
+import java.security.SecureRandom;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 import java.util.concurrent.ThreadLocalRandom;
+import java.time.LocalDate;
 
 import id.ac.ui.cs.advprog.perbaikiinaja.dtos.CustomerServiceRequestDto;
 import id.ac.ui.cs.advprog.perbaikiinaja.enums.ServiceRequestStateType;
+import id.ac.ui.cs.advprog.perbaikiinaja.repository.RepairEstimateRepository;
+import id.ac.ui.cs.advprog.perbaikiinaja.repository.ReportRepository;
 import id.ac.ui.cs.advprog.perbaikiinaja.service.wallet.WalletService;
 import id.ac.ui.cs.advprog.perbaikiinaja.state.EstimatedState;
 import id.ac.ui.cs.advprog.perbaikiinaja.state.PendingState;
@@ -45,6 +49,9 @@ public class ServiceRequestServiceImpl implements ServiceRequestService {
     private final CouponService couponService;
     private final PaymentMethodService paymentMethodService;
     private final WalletService walletService;
+    private final ReportRepository reportRepository;
+
+    private static final String notAssignedStr = "This technician is not assigned to this service request";
 
     @Autowired
     public ServiceRequestServiceImpl(
@@ -52,12 +59,14 @@ public class ServiceRequestServiceImpl implements ServiceRequestService {
             UserRepository userRepository,
             CouponService couponService,
             PaymentMethodService paymentMethodService,
-            WalletService walletService) {
+            WalletService walletService,
+            ReportRepository reportRepository) {
         this.serviceRequestRepository = serviceRequestRepository;
         this.userRepository = userRepository;
         this.couponService = couponService;
         this.paymentMethodService = paymentMethodService;
         this.walletService = walletService;
+        this.reportRepository = reportRepository;
     }
 
     @Override
@@ -70,7 +79,7 @@ public class ServiceRequestServiceImpl implements ServiceRequestService {
         List<ServiceRequest> requests = findByTechnician(technicianId);
         return requests.stream()
                 .filter(request -> request.getStateType().equals(status))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -92,13 +101,22 @@ public class ServiceRequestServiceImpl implements ServiceRequestService {
         if (request.getTechnician() == null) {
             request.setTechnician(technician);
         } else if (!request.getTechnician().getId().equals(technicianId)) {
-            throw new IllegalArgumentException("This technician is not assigned to this service request");
+            throw new IllegalArgumentException(notAssignedStr);
         }
 
-        // Provide the estimate
-        request.provideEstimate(estimate);
+        // Pre-check the estimate values and fix if needed
+        if (estimate.getCost() <= 0) {
+            estimate.setCost(0.01); // Set a minimal positive value
+        }
+        
+        if (estimate.getCompletionDate() == null) {
+            estimate.setCompletionDate(LocalDate.now().plusDays(1)); // Set to tomorrow by default
+        }
 
+        
+        request.provideEstimate(estimate);
         return serviceRequestRepository.save(request);
+        
     }
 
     @Override
@@ -109,8 +127,6 @@ public class ServiceRequestServiceImpl implements ServiceRequestService {
         if (!(request.getState() instanceof EstimatedState)) {
             throw new IllegalStateException("Cannot accept estimate in current state");
         }
-
-        Customer customer = getCustomer(customerId);
 
         // Then check if the customer owns the request
         if (!request.getCustomer().getId().equals(customerId)) {
@@ -126,7 +142,6 @@ public class ServiceRequestServiceImpl implements ServiceRequestService {
     @Override
     public ServiceRequest rejectEstimate(UUID requestId, UUID customerId) {
         ServiceRequest request = getServiceRequest(requestId);
-        Customer customer = getCustomer(customerId);
 
         // Ensure the customer owns the request
         if (!request.getCustomer().getId().equals(customerId)) {
@@ -142,11 +157,10 @@ public class ServiceRequestServiceImpl implements ServiceRequestService {
     @Override
     public ServiceRequest startService(UUID requestId, UUID technicianId) {
         ServiceRequest request = getServiceRequest(requestId);
-        Technician technician = getTechnician(technicianId);
 
         // Ensure the technician is assigned to the request
         if (!request.getTechnician().getId().equals(technicianId)) {
-            throw new IllegalArgumentException("This technician is not assigned to this service request");
+            throw new IllegalArgumentException(notAssignedStr);
         }
 
         // Start the service
@@ -162,7 +176,7 @@ public class ServiceRequestServiceImpl implements ServiceRequestService {
 
         // Ensure the technician is assigned to the request
         if (!request.getTechnician().getId().equals(technicianId)) {
-            throw new IllegalArgumentException("This technician is not assigned to this service request");
+            throw new IllegalArgumentException(notAssignedStr);
         }
 
         // Complete the service
@@ -188,16 +202,16 @@ public class ServiceRequestServiceImpl implements ServiceRequestService {
     @Override
     public ServiceRequest createReport(UUID requestId, Report report, UUID technicianId) {
         ServiceRequest request = getServiceRequest(requestId);
-        Technician technician = getTechnician(technicianId);
 
         // Ensure the technician is assigned to the request
         if (!request.getTechnician().getId().equals(technicianId)) {
-            throw new IllegalArgumentException("This technician is not assigned to this service request");
+            throw new IllegalArgumentException(notAssignedStr);
         }
 
+        Report savedReport = reportRepository.save(report);
+
         // Create the report
-        report.setServiceRequest(request);
-        request.createReport(report);
+        request.createReport(savedReport);
 
         return serviceRequestRepository.save(request);
     }
@@ -213,9 +227,8 @@ public class ServiceRequestServiceImpl implements ServiceRequestService {
 
     private PaymentMethod getPaymentMethodById(UUID paymentMethodId) {
         if (paymentMethodId != null) {
-            PaymentMethod paymentMethod = paymentMethodService.findById(paymentMethodId)
+            return paymentMethodService.findById(paymentMethodId)
                     .orElseThrow(() -> new IllegalArgumentException("Payment method not found with ID: " + paymentMethodId));
-            return paymentMethod;
         } else {
             throw new IllegalArgumentException("Payment method ID is required");
         }
@@ -250,14 +263,15 @@ public class ServiceRequestServiceImpl implements ServiceRequestService {
         Iterable<User> users = userRepository.findAll();
         List<Technician> allTechnicians = new java.util.ArrayList<>();
         for (User u : users) {
-            if (u instanceof Technician) {
-                allTechnicians.add((Technician) u);
+            if (u instanceof Technician technician) {
+                allTechnicians.add(technician);
             }
         }
         if (allTechnicians.isEmpty()) {
             throw new IllegalStateException("No technician available to assign to this service request");
         }
-        int randomIdx = ThreadLocalRandom.current().nextInt(allTechnicians.size());
+        SecureRandom secureRandom = new SecureRandom();
+        int randomIdx = secureRandom.nextInt(allTechnicians.size());
         return allTechnicians.get(randomIdx);
     }
 
